--- a/.computenest/ros_templates/template.yaml
+++ b/.computenest/ros_templates/template.yaml
@@ -205,7 +205,7 @@ Resources:
             Type=oneshot
             RemainAfterExit=yes
             WorkingDirectory=/home/admin/application/docker_compose
-            ExecStart=/usr/bin/docker compose -f docker-compose-postgresql.yaml up -d
+            ExecStart=/usr/bin/docker compose -f docker-compose-mysql.yaml up -d
             ExecStop=/usr/bin/docker compose down
             TimeoutStartSec=0
 
@@ -213,9 +213,12 @@ Resources:
             WantedBy=multi-user.target
             EOF
 
-            
+            # 在Docker Compose启动前执行此命令片段，命令中可以引用参数
+            echo "before docker compose starts"
             systemctl start docker-compose-app
             sleep 10
+            # 在Docker Compose启动后执行此命令片段，命令中可以引用参数
+            echo "after docker compose starts"
             
 
             ARGUS_VERSION=3.5.7 /bin/bash -c "$(curl -sS https://cms-agent-${RegionId}.oss-${RegionId}-internal.aliyuncs.com/Argus/agent_install_ecs-1.7.sh)" >> /root/install_cms_agent.log 2>&1
