Init computenest project.       on-behalf-of: @org aliyun-computenest@alibaba-inc.com

--- a/.computenest/ros_templates/template.yaml
+++ b/.computenest/ros_templates/template.yaml
@@ -194,6 +194,7 @@ Parameters:
     Type: String
     AssociationProperty: ALIYUN::ECS::Instance::Password
     Label: APP_KEY
+    NoEcho: True
 Resources:
   # 新建vpc
   EcsVpc:
