--- a/.computenest/ros_templates/template.yaml
+++ b/.computenest/ros_templates/template.yaml
@@ -1,7 +1,4 @@
 ROSTemplateFormatVersion: '2015-09-01'
-Description:
-  en: DockerCompose service template
-  zh-cn: DockerCompose服务模板
 Conditions:
   CreateVpcConditions:
     Fn::Equals:
@@ -190,11 +187,6 @@ Parameters:
           Fn::Equals:
             - ExistingVPC
             - ${VpcOption}
-  Password:
-    Type: String
-    AssociationProperty: ALIYUN::ECS::Instance::Password
-    Label: 密码
-    NoEcho: True
 Resources:
   # 新建vpc
   EcsVpc:
@@ -281,14 +273,6 @@ Resources:
       CommandContent:
         Fn::Sub:
           - |
-            dockerJson='{{ computenest::acr::dockerconfigjson }}'
-            decodeDockerJson=$(echo $dockerJson | base64 -d)
-            host=$(echo $decodeDockerJson | jq '.auths' | jq 'keys' | jq .[0])
-            username=$(echo $decodeDockerJson | jq ".auths.$host.username" | tr -d '"')
-            password=$(echo $decodeDockerJson | jq ".auths.$host.password" | tr -d '"')
-            host=$(echo $host | tr -d '"')
-            docker login $host --username=$username --password=$password
-
             wget '{{ computenest::file::yehanyh_quickstart-nocobase-docker-compose }}' -O /root/application/docker_compose.tar
             tar -xvf /root/application/docker_compose.tar -C /root/application
 
@@ -302,7 +286,7 @@ Resources:
             Type=oneshot
             RemainAfterExit=yes
             WorkingDirectory=/root/application/docker_compose
-            ExecStart=/usr/bin/docker compose -f docker-compose-postgresql.yaml up -d
+            ExecStart=/usr/bin/docker compose -f docker-compose-mysql.yaml up -d
             ExecStop=/usr/bin/docker compose down
             TimeoutStartSec=0
 
@@ -310,7 +294,7 @@ Resources:
             WantedBy=multi-user.target
             EOF
 
-            echo 'Password=${Password}' >> /root/application/docker_compose/.env
+            
             systemctl start docker-compose-app
           - RegionId:
               Ref: ALIYUN::Region
@@ -351,9 +335,4 @@ Metadata:
           - VSwitchCidrBlock
         Label:
           default: 可用区配置
-      - Parameters:
-          - Password
-        Label:
-          en: Software Configuration
-          zh-cn: 软件配置
       
